syntax = "proto3";

option go_package="../protocol";
package protocol;

message MessageHeader {
  string clientVersion = 1;
  int64 timestamp = 2;
  string id = 3;
  string nodeId = 4;
  string receiver = 5;
  bytes nodePubKey = 6;
  bytes sign = 7;
}

message Message {
  MessageHeader header = 1;
  MessageType type = 2;
  bytes body = 3;
  int32 resultCode = 4;
  string resultMessage = 5;
}

enum MessageType {
  PEER_IDENTITY = 0;
  IMAGE_GENERATION = 1;
}

message PeerIdentityBody {
  oneof data {
    PeerIdentityRequest req = 1;
    PeerIdentityResponse res = 2;
  }
}

message PeerIdentityRequest {
  string nodeId = 1;
}

message PeerIdentityResponse {
  string protocolVersion = 5; // e.g. ipfs/1.0.0
  string agentVersion = 6; // e.g. go-ipfs/0.1.0
  bytes publicKey = 1;
  repeated string listenAddrs = 2;
  repeated string protocols = 3;
}

message ImageGenerationBody {
  oneof data {
    ImageGenerationRequest req = 1;
    ImageGenerationResponse res = 2;
  }
}

message ImageGenerationRequest {
  string nodeId = 1;
  string model = 2;
  repeated string promptWord = 3;
}

message ImageGenerationResponse {
  string ipfsNode = 1;
  string cid = 2;
  string imageName = 3;
}
